--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,3 +15,7 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 sonar.exclusions=coverage/**, node_modules/**, testing/**
+#scan test
+sonar.test=testing/
+#test coverage
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
