--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,12 @@ services:
       - app-data:/app/public/images
 
   db:
-    image: "mariadb"
+    image: mariadb:latest
     restart: always
     links:
       - phpmyadmin
     ports:
-      - "3306"
+      - "3306:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=training
@@ -26,6 +26,7 @@ services:
     volumes:
       - ./apps/database/:/docker-entrypoint-initdb.d
       - db-data:/var/lib/mysql
+      
 
   phpmyadmin:
     image: "phpmyadmin"
