--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,28 @@
 version: "3.9"
 services:
+
   backend:
     build: ./apps
     restart: always
+    links:
+      - db
     ports:
-      - "3000:3000"  # Memetakan port 3000 di host ke container
+      - "3000"
     volumes:
       - app-data:/app/public/images
-    depends_on:
-      - db
 
   db:
     image: "mariadb"
     restart: always
+    links:
+      - phpmyadmin
     ports:
-      - "3306:3306"  # Memetakan port 3306 di host ke container
+      - "3306"
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: training
-      MYSQL_USER: peserta
-      MYSQL_PASSWORD: password
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=training
+      - MYSQL_USER=peserta
+      - MYSQL_PASSWORD=password
     volumes:
       - ./apps/database/:/docker-entrypoint-initdb.d
       - db-data:/var/lib/mysql
@@ -30,17 +33,15 @@ services:
     ports:
       - "8080:80"
     environment:
-      PMA_HOST: db
-    depends_on:
-      - db
+      - PMA_HOST=db
 
   web:
     build: ./nginx
     restart: always
     ports:
-      - "80:80"  # Memetakan port 80 di host ke container
+    - "80:80"
     depends_on:
-      - backend
+    - backend
 
 volumes:
   app-data:
